--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.6.2",
     "next": "^14.0.4",
-    "axios": "^1.6.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,4 +27,3 @@
     "typescript": "^5"
   }
 }
-
